--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,4 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/osx,python,windows,linux
 MillionSongSubset/*
 DUSTIN_VIRTUALENV/*
+Dustin_workbench/*
